# hashmash

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  hashmash.1  shell.nix
.github/: dependabot.yml
.github/workflows/: cachix-linux.yml  cachix-macos.yml  cachix.yml  ci.yml  release.yml  test.yml
nix/: rust-filter-source.nix  sources.json
src/: build_tri.rs  classify.rs  main.rs  opts.rs  randomize.rs  transform.rs  trigrams.bitmap
