[package]
name = "hashmash"
version = "1.0.0"
edition = "2018"
authors = [ "Simon Chatterjee" ]
license-file = "LICENSE"
readme = "README.md"

[[bin]]
name = "hashmash"

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.2"
rand = "0.7"
regex = "1"

# `build_tri` isn't an example, but a one-time tool that constructs a
# file (src/trigrams.bitmap) that is then checked in, and used to build
# the actual `hashmash` binary. It's listed as an example here just as
# an easy hack, to avoid it polluting the release package.
[[example]]
name = "build_tri"
path = "src/build_tri.rs"

# .deb package metadata
[package.metadata.deb]
extended-description = """\
Identify (and optionally randomize) cryptographic hashes in text files."""
priority = "optional"
section = "utilities"
depends = "$auto"
assets = [
    [ "target/release/hashmash", "/usr/bin", "755" ],
    [ "hashmash.1", "/usr/share/man/man1/", "644"  ]
]
